2008-02-12  Juri Linkov  <juri@jurta.org>

	* startup.el (fancy-startup-screen, normal-splash-screen):
	Set default-directory to command-line-default-directory.

	* desktop.el (after-init-hook): Set inhibit-startup-screen to t
	after reading the desktop.

	* progmodes/compile.el (compilation-auto-jump): Call
	compile-goto-error only when compilation-auto-jump-to-first-error
	is non-nil.
	(compilation-scroll-output): Replace :type 'boolean with a choice
	that has three options including a third option `first-error'.
	Doc fix.
	(compilation-start, compilation-forget-errors): Add an alternate
	condition comparing compilation-scroll-output with `first-error'
	in addition to compilation-auto-jump-to-first-error (to call
	compilation-auto-jump in the proper place).

2008-02-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule.el (sgml-html-meta-auto-coding-function):
	Make sure the search limit is ahead.

	* tar-mode.el: Fix broken indentation.
	(tar-mouse-extract, tar-extract, tar-subfile-save-buffer):
	Use with-current-buffer.

2008-02-12  Juanma Barranquero  <lekktu@gmail.com>

	* hexl.el (hexl-mode): Don't make `font-lock-defaults' buffer-local;
	it is already automatically buffer-local.

2008-02-11  Drew Adams  <drew.adams@oracle.com>

	* help.el (describe-key): Join some split lines to facilitate filling.
	* help-fns.el (describe-function-1): Fill text of overlong lines.

2008-02-12  Kenichi Handa  <handa@ni.aist.go.jp>

	* emacs-lisp/bytecomp.el (byte-compile-lapcode):
	Use unibyte-string instead of string-make-unibyte.

	* Makefile.in (AUTOGENEL): Remove charprop.el and uni-*.el.

2008-02-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-display): Change file arg to buffer arg, so it
	works also for buffers w/o buffer-file-name.  Update callers.
	(doc-view-clone-buffer-hook): New fun.
	(doc-view-mode): Use it for indirect clones.  Mark the overlays with
	the `doc-view' property so they can be recognized.
