@@ -161,23 +161,23 @@ enum coding_attr_index
 
 /* Macros to access an element of an attribute vector.  */
 
-#define CODING_ATTR_BASE_NAME(attrs)	AREF (attrs, coding_attr_base_name)
-#define CODING_ATTR_TYPE(attrs)		AREF (attrs, coding_attr_type)
-#define CODING_ATTR_CHARSET_LIST(attrs)	AREF (attrs, coding_attr_charset_list)
-#define CODING_ATTR_MNEMONIC(attrs)	AREF (attrs, coding_attr_mnemonic)
-#define CODING_ATTR_DOCSTRING(attrs)	AREF (attrs, coding_attr_docstring)
-#define CODING_ATTR_ASCII_COMPAT(attrs)	AREF (attrs, coding_attr_ascii_compat)
-#define CODING_ATTR_DECODE_TBL(attrs)	AREF (attrs, coding_attr_decode_tbl)
-#define CODING_ATTR_ENCODE_TBL(attrs)	AREF (attrs, coding_attr_encode_tbl)
-#define CODING_ATTR_TRANS_TBL(attrs)	AREF (attrs, coding_attr_trans_tbl)
-#define CODING_ATTR_POST_READ(attrs)	AREF (attrs, coding_attr_post_read)
-#define CODING_ATTR_PRE_WRITE(attrs)	AREF (attrs, coding_attr_pre_write)
-#define CODING_ATTR_DEFAULT_CHAR(attrs)	AREF (attrs, coding_attr_default_char)
-#define CODING_ATTR_FOR_UNIBYTE(attrs)	AREF (attrs, coding_attr_for_unibyte)
-#define CODING_ATTR_FLUSHING(attrs)	AREF (attrs, coding_attr_flushing)
-#define CODING_ATTR_PLIST(attrs)	AREF (attrs, coding_attr_plist)
-#define CODING_ATTR_CATEGORY(attrs)	AREF (attrs, coding_attr_category)
-#define CODING_ATTR_SAFE_CHARSETS(attrs)AREF (attrs, coding_attr_safe_charsets)
+#define CODING_ATTR_BASE_NAME(attrs)	ASLOT (attrs, coding_attr_base_name)
+#define CODING_ATTR_TYPE(attrs)		ASLOT (attrs, coding_attr_type)
+#define CODING_ATTR_CHARSET_LIST(attrs)	ASLOT (attrs, coding_attr_charset_list)
+#define CODING_ATTR_MNEMONIC(attrs)	ASLOT (attrs, coding_attr_mnemonic)
+#define CODING_ATTR_DOCSTRING(attrs)	ASLOT (attrs, coding_attr_docstring)
+#define CODING_ATTR_ASCII_COMPAT(attrs)	ASLOT (attrs, coding_attr_ascii_compat)
+#define CODING_ATTR_DECODE_TBL(attrs)	ASLOT (attrs, coding_attr_decode_tbl)
+#define CODING_ATTR_ENCODE_TBL(attrs)	ASLOT (attrs, coding_attr_encode_tbl)
+#define CODING_ATTR_TRANS_TBL(attrs)	ASLOT (attrs, coding_attr_trans_tbl)
+#define CODING_ATTR_POST_READ(attrs)	ASLOT (attrs, coding_attr_post_read)
+#define CODING_ATTR_PRE_WRITE(attrs)	ASLOT (attrs, coding_attr_pre_write)
+#define CODING_ATTR_DEFAULT_CHAR(attrs)	ASLOT (attrs, coding_attr_default_char)
+#define CODING_ATTR_FOR_UNIBYTE(attrs)	ASLOT (attrs, coding_attr_for_unibyte)
+#define CODING_ATTR_FLUSHING(attrs)	ASLOT (attrs, coding_attr_flushing)
+#define CODING_ATTR_PLIST(attrs)	ASLOT (attrs, coding_attr_plist)
+#define CODING_ATTR_CATEGORY(attrs)	ASLOT (attrs, coding_attr_category)
+#define CODING_ATTR_SAFE_CHARSETS(attrs)ASLOT (attrs, coding_attr_safe_charsets)
 
 
 /* Return the name of a coding system specified by ID.  */
@@ -241,7 +241,7 @@ enum coding_attr_index
 	spec = CODING_SYSTEM_SPEC (x);			\
       }							\
     if (NILP (spec))					\
-      x = wrong_type_argument (Qcoding_system_p, (x));	\
+      wrong_type_argument (Qcoding_system_p, (x));	\
   } while (0)
 
 
@@ -258,7 +258,7 @@ enum coding_attr_index
 	  id = CODING_SYSTEM_ID (x);				\
 	}							\
       if (id < 0)						\
-	x = wrong_type_argument (Qcoding_system_p, (x));	\
+	wrong_type_argument (Qcoding_system_p, (x));	\
     } while (0)
 
 
